--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -2,3 +2,50 @@
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+body {
+  padding: 40px 40px;
+  background-color: #F4F4F4;
+}
+
+// Index
+
+.car-index {
+  display: flex;
+  justify-content: space-between;
+}
+
+.garage-details {
+  width: 30%;
+  padding-left: 20px;
+  background-color: #D4D4D4;
+}
+
+.car-list {
+  width: 70%;
+  background-color: #D4D4D4;
+  margin-left: 10px;
+  padding: 20px;
+}
+
+.car-item {
+  background: white;
+  padding: 20px;
+  margin-bottom: 10px;
+
+  a {
+    h3 {
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: none
+      }
+    }
+  }
+}
+
+// Show
+.car-show {
+  background-color: white;
+  padding: 30px;
+}
